@@ -91,6 +91,7 @@ Plugins are defined in the `play.plugins` file under the `conf` directory. If yo
 	10005:securesocial.core.providers.GitHubProvider
 	10006:securesocial.core.providers.FoursquareProvider
 	10007:securesocial.core.providers.XingProvider
+	10008:securesocial.core.providers.InstagramProvider
 
 Only the authentication providers you include in the `play.plugins` file will appear on the login page.  
 
