@@ -11,3 +11,4 @@
 10005:securesocial.core.providers.GitHubProvider
 10006:securesocial.core.providers.FoursquareProvider
 10007:securesocial.core.providers.XingProvider
+10008:securesocial.core.providers.InstagramProvider
