@@ -12,3 +12,4 @@
 10006:service.MyEventListener
 10007:securesocial.core.providers.FoursquareProvider
 10008:securesocial.core.providers.XingProvider
+10009:securesocial.core.providers.InstagramProvider
